# hyperthink

./: README.md
cli/: pyproject.toml
cli/hyperthink_cli/: __init__.py  constants.py  inference.py  main.py
lib-litellm/: pyproject.toml
lib-litellm/hyperthink_litellm/: __init__.py  checkpoint.py  core.py  defaults.py  helpers.py  hyperthink.py  inference.py  prompts.py  schemas.py  state.py
lib-litellm/hyperthink_litellm/tools/: __init__.py  math.py  mcp.py
specs/: IMPLEMENTATION.md  REVIEWER_PREAMBLE.md  SCAFFOLDING.md  STARTER_PREAMBLE.md
