[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperthink-litellm"
version = "0.1.0"
description = "HyperThink LLM scaffolding algorithm implemented with LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
math = ["sympy>=1.12"]
search = ["duckduckgo-search>=6.0.0"]
all = ["sympy>=1.12", "duckduckgo-search>=6.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["hyperthink_litellm"]
